--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -59,7 +59,7 @@
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/bg_edit_text"
-        android:drawableStart="@drawable/ic_mess"
+        android:drawableStart="@drawable/ic_account"
         style="@style/Text"
         android:drawablePadding="12dp"
         android:paddingEnd="10dp"
