--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -9,8 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/img_back_Information"
@@ -28,8 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_marginTop="28dp"
-            android:text="@string/sua_thong_t"
             android:fontFamily="@font/be_vietnam_medium"
+            android:text="@string/sua_thong_t"
             android:textColor="#000000"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -74,93 +73,157 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <EditText
-            android:id="@+id/editTextSDT"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constrain2"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/bg_borders_edit"
-            android:drawableRight="@drawable/ic_pen"
-            android:hint="Nhập số điện thoại"
-            android:paddingLeft="25dp"
-            android:maxLines="1"
-            android:textColor="@color/black"
-            android:enabled="false"
-            android:fontFamily="@font/be_vietnam_medium"
-            android:paddingRight="15dp"
-            android:textSize="16sp"
-            android:lines="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView29" />
+            app:layout_constraintTop_toBottomOf="@+id/textView29"
+            tools:ignore="MissingConstraints">
 
-        <EditText
-            android:id="@+id/editTextdate"
+            <EditText
+                android:id="@+id/editTextSDT"
+                style="@style/Text"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@drawable/bg_borders_edit"
+                android:enabled="false"
+                android:hint="Nhập số điện thoại"
+                android:lines="1"
+                android:maxLines="1"
+                android:paddingLeft="25dp"
+                android:paddingRight="15dp"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/iconeditsdt"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/iconeditsdt"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="3dp"
+                android:src="@drawable/ic_pen"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/editTextSDT"
+                app:layout_constraintTop_toTopOf="parent" />" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constrain3"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView32"
+            tools:ignore="MissingConstraints">
+
+            <EditText
+                android:id="@+id/editTextdate"
+                style="@style/Text"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@drawable/bg_borders_edit"
+                android:enabled="false"
+                android:hint="DD/MM/YY"
+                android:lines="1"
+                android:maxLines="1"
+                android:paddingLeft="25dp"
+                android:paddingRight="15dp"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/iconeditdate"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/iconeditdate"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="3dp"
+                android:src="@drawable/ic_pen"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/editTextdate"
+                app:layout_constraintTop_toTopOf="parent" />" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constrain1"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/bg_borders_edit"
-            android:drawableRight="@drawable/ic_pen"
-            android:hint="DD/MM/YY"
-            android:textColor="@color/black"
-            android:fontFamily="@font/be_vietnam_medium"
-            android:paddingLeft="25dp"
-            android:paddingRight="15dp"
-            android:enabled="false"
-            android:maxLines="1"
-            android:lines="1"
-            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView32" />
+            app:layout_constraintTop_toBottomOf="@+id/textView30"
+            tools:ignore="MissingConstraints">
 
-        <EditText
-            android:id="@+id/editTextname"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/bg_borders_edit"
-            android:drawableRight="@drawable/ic_pen"
-            android:hint="Nhập tên"
-            style="@style/Text"
-            android:enabled="false"
-            android:paddingLeft="25dp"
-            android:paddingRight="15dp"
-            android:maxLines="1"
-            android:lines="1"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView30" />
+            <EditText
+                android:id="@+id/editTextname"
+                style="@style/Text"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@drawable/bg_borders_edit"
+                android:enabled="false"
+                android:hint="Nhập tên"
+                android:lines="1"
+                android:maxLines="1"
+                android:paddingLeft="25dp"
+                android:paddingRight="15dp"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/iconeditname"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/iconeditname"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="3dp"
+                android:src="@drawable/ic_pen"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/editTextname"
+                app:layout_constraintTop_toTopOf="parent" />" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <TextView
             android:id="@+id/textView29"
+            style="@style/Text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
             android:layout_marginTop="20dp"
             android:text="@string/s_d_t"
-            style="@style/Text"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextname" />
+            app:layout_constraintTop_toBottomOf="@+id/constrain1" />
 
         <TextView
             android:id="@+id/textView30"
+            style="@style/Text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
             android:layout_marginTop="10dp"
             android:text="@string/h_v_t"
-            style="@style/Text"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />
@@ -171,28 +234,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
             android:layout_marginTop="20dp"
+            android:fontFamily="@font/be_vietnam_medium"
             android:text="@string/n_s"
             android:textColor="#000000"
-            android:fontFamily="@font/be_vietnam_medium"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextSDT" />
+            app:layout_constraintTop_toBottomOf="@+id/constrain2" />
 
-        <TextView
-            android:id="@+id/tvsave"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="45dp"
-            android:layout_marginTop="22dp"
-            android:background="@drawable/bg_btn"
-            android:gravity="center"
-            android:text="@string/l_u"
-            style="@style/Text_btn"
-            app:layout_constraintBottom_toTopOf="@+id/guideline15"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextdate"
-            app:layout_constraintVertical_bias="0.5" />
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline15"
             android:layout_width="wrap_content"
