--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -26,6 +26,7 @@
         android:layout_marginTop="30dp"
         android:fontFamily="@font/be_vietnam_medium"
         android:text="@string/dia_chi"
+
         style="@style/Text"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,40 +80,30 @@
 
 
         <ImageView
+            android:id="@+id/imageView40"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
+            android:layout_marginStart="25dp"
             android:src="@drawable/item_themdiachi"
             app:layout_constraintBottom_toBottomOf="@+id/textView17"
-            app:layout_constraintEnd_toStartOf="@+id/textView17"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/textView17" />
 
         <TextView
             android:id="@+id/textView17"
+            style="@style/Text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/be_vietnam_medium"
             android:text="@string/add_dia"
-            style="@style/Text"
             android:textColor="#ff1a1a"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView40"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.238" />
-
-        <ImageView
-            android:layout_width="7dp"
-            android:layout_height="17dp"
-            android:layout_marginEnd="28dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView17"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView17"
-            app:srcCompat="@drawable/ic_back_arrow" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
