--- a/app/src/main/res/layout/activity_change_pass.xml
+++ b/app/src/main/res/layout/activity_change_pass.xml
@@ -41,6 +41,8 @@
         android:layout_marginTop="120dp"
         android:layout_marginHorizontal="30dp"
         app:hintEnabled="false"
+        app:boxBackgroundMode="filled"
+        app:boxStrokeWidth="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivLogo"
@@ -53,6 +55,7 @@
             android:drawableStart="@drawable/ic_lock"
             android:drawablePadding="12dp"
             style="@style/Text"
+            android:textSize="16sp"
             android:hint="@string/nh_p_m_t_kh_u_m_i"
             android:paddingStart="16dp"
             android:inputType="textPassword" />
@@ -62,6 +65,9 @@
         android:id="@+id/textInputLayout3"
         android:layout_width="0dp"
         android:layout_height="60dp"
+        app:boxBackgroundMode="filled"
+        app:boxStrokeWidth="0dp"
+
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="25dp"
         app:hintEnabled="false"
@@ -77,13 +83,14 @@
             android:background="@drawable/bg_edit_text"
             android:drawableStart="@drawable/ic_lock"
             android:drawablePadding="12dp"
+            android:textSize="16sp"
             android:hint="@string/nh_p_l_i_m_t_kh_u_m_i"
             android:inputType="textPassword"
             android:paddingStart="16dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
-    <Button
+    <TextView
         android:id="@+id/btnLuu"
         style="@style/Text_btn"
         android:layout_width="0dp"
