--- a/app/src/main/res/layout/activity_confirm_otpactivity.xml
+++ b/app/src/main/res/layout/activity_confirm_otpactivity.xml
@@ -44,7 +44,7 @@
         android:hint="Nhập mã"
         style="@style/Text"
         android:inputType="textPersonName"
-        android:textSize="18sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,13 +65,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivLogo" />
 
-    <Button
+    <TextView
         android:id="@+id/btnContinue"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="80dp"
         android:layout_marginTop="35dp"
         android:background="@drawable/bg_btn"
+        android:gravity="center"
         style="@style/Text_btn"
         android:text="Tiếp Tục"
         app:layout_constraintEnd_toEndOf="parent"
