--- a/app/src/main/res/layout/activity_invoicedetails.xml
+++ b/app/src/main/res/layout/activity_invoicedetails.xml
@@ -41,8 +41,9 @@
 
     <ScrollView
         android:id="@+id/scrollView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView28">
@@ -162,7 +163,6 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="15dp"
-                    android:text="TextView"
                     android:textColor="#565656"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -176,7 +176,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="15dp"
-                    android:text="TextView"
                     android:textColor="#565656"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -190,7 +189,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="15dp"
-                    android:text="TextView"
                     android:textColor="#565656"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -204,7 +202,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="15dp"
-                    android:text="Nhà Trọ Kiên Phượng, 292 Đường 422B, thôn Vực, Hoài Đức, Hà Nội, Việt Nam "
                     android:textColor="#565656"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -218,7 +215,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="15dp"
-                    android:text="TextView"
                     android:textColor="#565656"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -233,7 +229,6 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="15dp"
                     android:layout_marginBottom="10dp"
-                    android:text="TextView"
                     android:textColor="#565656"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -331,6 +326,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="35dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView85"
@@ -379,6 +376,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="45dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/bg_btn"
         android:fontFamily="@font/be_vietnam_bold"
         android:gravity="center"
@@ -387,8 +385,8 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
+        app:layout_constraintHorizontal_bias="0.629"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
