--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,6 +59,7 @@
         android:drawablePadding="12dp"
         android:paddingEnd="10dp"
         style="@style/Text"
+        android:textSize="16sp"
         android:hint="@string/nh_p_email"
         android:paddingStart="16dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,6 +73,9 @@
         app:passwordToggleEnabled="true"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="25dp"
+        app:boxBackgroundMode="filled"
+        app:boxStrokeWidth="0dp"
+
         app:hintEnabled="false"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,6 +91,7 @@
             android:drawableStart="@drawable/ic_lock"
             android:drawablePadding="12dp"
             style="@style/Text"
+            android:textSize="16sp"
             android:hint="@string/nh_p_password"
             android:paddingEnd="40dp"
             android:paddingStart="16dp"
