--- a/app/src/main/res/layout/activity_login_fa_go.xml
+++ b/app/src/main/res/layout/activity_login_fa_go.xml
@@ -108,7 +108,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cvLoginFacebook" />
 
 
-    <Button
+    <TextView
         android:id="@+id/tvLoginDangNhap"
         android:layout_width="0dp"
         android:layout_height="50dp"
