--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -22,6 +22,7 @@
         android:layout_height="35dp"
         android:layout_marginTop="25dp"
         android:text="Thanh Toán"
+        style="@style/Text"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,8 +47,10 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView18">
+        app:layout_constraintTop_toBottomOf="@+id/imageView18"
+        app:layout_constraintVertical_bias="0.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -122,114 +125,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvselectaddress" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraintLayout5"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/bg_borders_sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.473"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView36"
-                app:layout_constraintVertical_bias="1.0">
-
-                <TextView
-                    android:id="@+id/textView64"
-                    style="@style/Text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="12dp"
-                    android:text="Hóa đơn"
-                    android:textSize="16sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
-                    android:id="@+id/imageView33"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    android:layout_marginTop="15dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView69"
-                    app:srcCompat="@drawable/ic_vienduoi" />
-
-                <TextView
-                    android:id="@+id/textView65"
-                    style="@style/Text"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_marginTop="5dp"
-                    android:text="Giá tiền"
-                    app:layout_constraintEnd_toStartOf="@+id/tvmoney"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView64" />
-
-                <TextView
-                    android:id="@+id/tvmoney"
-                    style="@style/Text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:text="  90.000 đ"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView65"
-                    app:layout_constraintEnd_toEndOf="parent" />
-
-                <TextView
-                    android:id="@+id/textView67"
-                    style="@style/Text"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_marginTop="5dp"
-                    android:text="Phí giao hàng"
-                    app:layout_constraintEnd_toStartOf="@+id/tvgiaohang"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView65" />
-
-                <TextView
-                    android:id="@+id/tvgiaohang"
-                    style="@style/Text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:text="50.000 đ"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView67"
-                    app:layout_constraintEnd_toEndOf="parent" />
-
-                <TextView
-                    android:id="@+id/textView69"
-                    style="@style/Text"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_marginTop="5dp"
-                    android:text="Khuyến mãi "
-                    android:textColor="#E60707"
-                    app:layout_constraintEnd_toStartOf="@+id/textView70"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView67" />
-
-                <TextView
-                    android:id="@+id/textView70"
-                    style="@style/Text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:text="  -20.000 đ"
-                    android:textColor="#E60707"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView69"
-                    app:layout_constraintEnd_toEndOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
                 android:id="@+id/textView57"
@@ -349,6 +244,182 @@
                 app:layout_constraintTop_toTopOf="@+id/edtstatus"
                 app:srcCompat="@drawable/ic_document" />
 
+            <ImageView
+                android:id="@+id/imageView27"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="35dp"
+                android:src="@drawable/ic_money"
+                app:layout_constraintBottom_toBottomOf="@+id/textView5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView5" />
+
+            <ImageView
+                android:id="@+id/imageView33"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="35dp"
+                android:src="@drawable/momo"
+                app:layout_constraintBottom_toBottomOf="@+id/textView12"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView12" />
+
+            <TextView
+                android:id="@+id/textView5"
+                style="@style/Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:text="Tiền mặt"
+                android:textSize="16sp"
+                app:layout_constraintStart_toEndOf="@+id/imageView27"
+                app:layout_constraintTop_toBottomOf="@+id/imageView36" />
+
+            <RadioButton
+                android:id="@+id/radioButton6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
+                android:buttonTint="#EB6969"
+                app:layout_constraintBottom_toBottomOf="@+id/textView5"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView5"
+                app:layout_constraintVertical_bias="0.2" />
+
+            <TextView
+                android:id="@+id/textView12"
+                style="@style/Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="15dp"
+                android:text="Ví MoMo"
+                android:textSize="16sp"
+                app:layout_constraintStart_toEndOf="@+id/imageView33"
+                app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+            <RadioButton
+                android:id="@+id/radioButton7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
+                android:buttonTint="#EB6969"
+                app:layout_constraintBottom_toBottomOf="@+id/textView12"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView12" />
+
+            <ImageView
+                android:id="@+id/imageView368"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView12"
+                app:srcCompat="@drawable/ic_vienduoi" />
+
+             <androidx.constraintlayout.widget.ConstraintLayout
+                 android:id="@+id/constraintLayout5"
+                 android:layout_width="0dp"
+                 android:layout_height="wrap_content"
+                 android:layout_marginHorizontal="10dp"
+                 android:layout_marginTop="10dp"
+                 android:layout_marginBottom="20dp"
+                 android:background="@drawable/bg_borders_sp"
+                 app:layout_constraintBottom_toBottomOf="parent"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintHorizontal_bias="0.473"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toBottomOf="@+id/imageView368"
+                 app:layout_constraintVertical_bias="1.0">
+
+                 <TextView
+                     android:id="@+id/textView64"
+                     style="@style/Text"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_marginStart="12dp"
+                     android:layout_marginTop="12dp"
+                     android:text="Hóa đơn"
+                     android:textSize="16sp"
+                     app:layout_constraintStart_toStartOf="parent"
+                     app:layout_constraintTop_toTopOf="parent" />
+
+
+
+                 <TextView
+                     android:id="@+id/textView65"
+                     style="@style/Text"
+                     android:layout_width="0dp"
+                     android:layout_height="wrap_content"
+                     android:layout_marginHorizontal="15dp"
+                     android:layout_marginTop="5dp"
+                     android:text="Giá tiền"
+                     app:layout_constraintEnd_toStartOf="@+id/tvmoney"
+                     app:layout_constraintStart_toStartOf="parent"
+                     app:layout_constraintTop_toBottomOf="@+id/textView64" />
+
+                 <TextView
+                     android:id="@+id/tvmoney"
+                     style="@style/Text"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_marginEnd="10dp"
+                     android:text="  90.000 đ"
+                     app:layout_constraintBottom_toBottomOf="@+id/textView65"
+                     app:layout_constraintEnd_toEndOf="parent" />
+
+                 <TextView
+                     android:id="@+id/textView67"
+                     style="@style/Text"
+                     android:layout_width="0dp"
+                     android:layout_height="wrap_content"
+                     android:layout_marginHorizontal="15dp"
+                     android:layout_marginTop="5dp"
+                     android:text="Phí giao hàng"
+                     app:layout_constraintEnd_toStartOf="@+id/tvgiaohang"
+                     app:layout_constraintStart_toStartOf="parent"
+                     app:layout_constraintTop_toBottomOf="@+id/textView65" />
+
+                 <TextView
+                     android:id="@+id/tvgiaohang"
+                     style="@style/Text"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_marginEnd="10dp"
+                     android:text="50.000 đ"
+                     app:layout_constraintBottom_toBottomOf="@+id/textView67"
+                     app:layout_constraintEnd_toEndOf="parent" />
+
+                 <TextView
+                     android:id="@+id/textView69"
+                     style="@style/Text"
+                     android:layout_width="0dp"
+                     android:layout_height="wrap_content"
+                     android:layout_marginHorizontal="15dp"
+                     android:layout_marginTop="5dp"
+                     android:layout_marginBottom="10dp"
+                     android:text="Khuyến mãi "
+                     android:textColor="#E60707"
+                     app:layout_constraintBottom_toBottomOf="parent"
+                     app:layout_constraintEnd_toStartOf="@+id/textView70"
+                     app:layout_constraintStart_toStartOf="parent"
+                     app:layout_constraintTop_toBottomOf="@+id/textView67" />
+
+                 <TextView
+                     android:id="@+id/textView70"
+                     style="@style/Text"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_marginEnd="10dp"
+                     android:text="  -20.000 đ"
+                     android:textColor="#E60707"
+                     app:layout_constraintBottom_toBottomOf="@+id/textView69"
+                     app:layout_constraintEnd_toEndOf="parent" />
+
+             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
     <androidx.constraintlayout.widget.ConstraintLayout
