--- a/app/src/main/res/layout/activity_view_all_cbo.xml
+++ b/app/src/main/res/layout/activity_view_all_cbo.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.shop.Activity.ViewAllCboActivity">
     <ImageView
         android:id="@+id/img_back_ViewAllCbo"
