--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+
     tools:context=".ui.cart.CartFragment">
 
     <TextView
@@ -14,7 +15,7 @@
         android:background="#F9514F"
         android:gravity="center_horizontal"
         android:text="Giỏ Hàng"
-        android:fontFamily="@font/be_vietnam_bold"
+        style="@style/Text_btn"
         android:textColor="@color/white"
         android:textSize="22sp"
         android:textStyle="bold"
@@ -82,14 +83,13 @@
 
         <TextView
             android:id="@+id/textView42"
-            style="@style/Text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="25dp"
             android:text="Thanh Toán"
             android:textColor="@color/white"
             android:textSize="20sp"
-            android:textStyle="bold"
+            style="@style/Text_btn"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.953"
