--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -17,7 +17,7 @@
         android:fontFamily="@font/be_vietnam_bold"
         android:textColor="@color/white"
         android:textSize="22sp"
-        android:textStyle="bold"
+        style="@style/Text_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
