--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -29,6 +29,7 @@
             android:text="@string/c_d"
             android:textColor="#000000"
             android:textSize="20sp"
+            style="@style/Text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -87,6 +88,7 @@
                 android:layout_marginStart="10dp"
                 android:text="@string/cai_d_t_b"
                 android:textSize="20sp"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView23"
                 app:layout_constraintTop_toTopOf="parent" />
