--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -43,6 +43,7 @@
         android:layout_height="50dp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
+        style="@style/Text"
         android:text="Cơm gà nướng mật ong"
         android:fontFamily="@font/be_vietnam_medium"
         android:textColor="#000000"
